# FT_SCServo_Debug_Qt

./: AppImage.sh  CMakeLists.txt  Dockerfile
.github/workflows/: upload_appimage.yml
resources/: FT_SCServo.desktop
